Added links to portfolio, ResonsiveVoice & Behind the name

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
         <div id="results"></div>
     </div>
     
-    <div id="footer"><p>Made By Bashir Harrell & Responsivevoice.js and BehindTheName</p></div>
+    <div id="footer"><p>Made By <a href="https://bookofbash.github.io/home/">Bashir Harrell</a> with  <a href="https://responsivevoice.org/">ResponsieVoice.js</a> and <a href="https://www.behindthename.com/">BehindTheName</a></p></div>
     <script src="main.js"></script>
 </body>
 </html>
